<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/front_card_container"
    android:layout_width="300dp"
    android:layout_height="180dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

    </LinearLayout>

    <TextView
        android:id="@+id/front_card_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="42dp"
        android:hint="XXXX XXXX XXXX XXXX"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:textColor="@android:color/white"
        android:textColorHint="@color/semi_white"
        android:textSize="@dimen/text_size_normal"


        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="138dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_32"
            android:orientation="vertical">

            <TextView
                android:id="@+id/front_card_holder_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint=""
                android:maxWidth="150dp"
                android:minWidth="150dp"
                android:paddingTop="@dimen/padding_small"
                android:text="@string/card_holder_name_default"
                android:paddingBottom="@dimen/padding_small"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@color/semi_white" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_24"
            android:orientation="vertical">

                />

            <TextView
                android:id="@+id/front_card_expiry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/mm_yy"
                android:maxWidth="150dp"
                android:minWidth="150dp"
                android:paddingTop="@dimen/padding_small"
                android:paddingBottom="@dimen/padding_small"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/card_mm_yy"
                android:textColor="@android:color/darker_gray"
                android:textColorHint="@color/semi_white" />

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>